don't reset lives on level finish moved some classes do different packages the ball has a 20% chance of deviating by half a degree when reflecting off of bricks added some random levels